--- a/package.json
+++ b/package.json
@@ -23,34 +23,34 @@
     "@types/chai": "4.1.7",
     "@types/cosmiconfig": "5.0.3",
     "@types/glob": "7.1.1",
-    "@types/lodash": "4.14.126",
-    "@types/mocha": "5.2.6",
+    "@types/lodash": "4.14.136",
+    "@types/mocha": "5.2.7",
     "@types/mock-fs": "3.6.30",
-    "@types/node": "12.0.0",
+    "@types/node": "12.6.3",
     "@types/parcel-bundler": "1.12.0",
     "@types/request-promise-native": "1.0.16",
-    "@types/semver": "6.0.0",
+    "@types/semver": "6.0.1",
     "@types/string-similarity": "3.0.0",
     "chai": "4.2.0",
     "chalk": "2.4.2",
-    "eslint": "5.16.0",
+    "eslint": "6.0.1",
     "eslint-config-tarwich": "github:tarwich/eslint-config-tarwich",
     "mocha": "6.1.4",
-    "mock-fs": "4.10.0",
+    "mock-fs": "4.10.1",
     "parcel-bundler": "1.12.3",
-    "prettier": "1.17.1",
+    "prettier": "1.18.2",
     "request-promise-native": "1.0.7",
-    "semver": "6.0.0",
-    "typescript": "3.4.5"
+    "semver": "6.2.0",
+    "typescript": "3.5.3"
   },
   "dependencies": {
-    "commander": "^2.20.0",
-    "cosmiconfig": "^5.2.0",
-    "dotenv": "^8.0.0",
-    "glob": "^7.1.4",
-    "linguist-languages": "^7.4.0",
-    "lodash": "^4.17.11",
-    "string-similarity": "^3.0.0"
+    "commander": "2.20.0",
+    "cosmiconfig": "5.2.1",
+    "dotenv": "8.0.0",
+    "glob": "7.1.4",
+    "linguist-languages": "7.5.1",
+    "lodash": "4.17.14",
+    "string-similarity": "3.0.0"
   },
   "prettier": {
     "singleQuote": true,
